<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Automator</string>
    <string name="action_new">New</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="app_logo_text">Automator</string>
    <string name="app_version_info">Version 1.0.0 \n 2013 \u00A9 Dinu Kumarasiri </string>
    <string name="image_description">Logo</string>
    <string name="list_row_profile">Profiles</string>
    <string name="list_row_alarm">Alarms</string>
    <string name="list_row_sms">SMS</string>
    <string name="list_row_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="profile_image_button">Profile</string>
    <string name="alarm_image_button">Alarm</string>
    <string name="sms_image_button">SMS</string>
    <string name="profile_button">Profile</string>
    <string name="alarm__button">Alarm</string>
    <string name="sms_button">SMS</string>
    <string name="button_set_location">Set Location</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_locator">Locator</string>
    <string name="title_activity_settings">Settings</string>
    <string name="profile_enable_button">Enable</string>
    <string name="title_activity_profile_settings">ProfileSettingsActivity</string>
    <string name="title_dialog_set_location">Set Location</string>
    <string name="dialog_text_lattitude">Latitude</string>
    <string name="dialog_text_longitude">Longitude</string>
    <string name="dialog_text_location_name">Location Name</string>
    <string name="dialog_text_location_radius">Radius (m)</string>
    <string name="dialog_list_choice_item1">Entering</string>
    <string name="dialog_list_choice_item2">Leaving</string>
    <string name="dialog_button_save">Save</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="fragment_set_location_on_map_button">Set Location On Map</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="dialog_message_confirm_delete">Do you want to delete this profile?</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="sound_fragment_volume">Volume</string>
    <string name="sound_fragment_vibration">Vibration</string>
    <string name="sound_fragment_silent">Silent</string>
    <string name="display_fragment_brigtness">Brightness</string>
    <string name="display_fragment_autorotation">Auto-rotate Screen</string>
    <string name="display_fragment_sleep">Sleep</string>
    <string name="display_fragment_pulse_notification">Pulse Notification Light</string>
    <string name="network_fragment_wifi">Wi-Fi</string>
    <string name="network_fragment_bluetooth">Bluetooth</string>
    <string name="profile_activity_title">Profiles</string>
    <string name="sms_activity_title">SMS</string>
    <string name="alarm_activity_title">Alarms</string>
    <string name="sms_set_location_button">Set Location</string>
    <string name="sms_enter_phone_number">Enter Phone Number</string>
    <string name="sms_image_button_content_description">Image button for invoking the contact picker</string>
    <string name="sms_message_text_view">Enter Message</string>
    <string name="sms_contact_picker_hint">Search By Name</string>
    <string name="battery_level_enable">Enable Battery Level</string>
    <string name="location_enable">Enable Location</string>

    <string-array name="sleep">
        <item>15 sec</item>
        <item>30 sec</item>
        <item>1 min</item>
        <item>2 min</item>
        <item>5 min</item>
        <item>10 min</item>
    </string-array>

    <string name="title_activity_sms_settings">SmsSettings</string>
    <string name="title_activity_contact_picker">ContactPickerActivity</string>
    <string name="title_activity_alarm_settings">AlarmSettingsActivity</string>
    <string name="alarm_edit_text_label">Label</string>

</resources>