<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
   <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
    <TextView
        android:id="@+id/textView_enable_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/location_enable" 
        android:layout_gravity="center"/>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

    
    <ToggleButton
        android:id="@+id/toggle_button_enable_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:background="@drawable/selector_switch"
        android:focusable="false"
        android:textOn=""
        android:textOff=""/>
    </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_setLocation_onMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_set_location_on_map_button"/>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text_location_name" />
    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
       />
        
    </TableRow>
    
    <TableRow 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView_lattitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text_lattitude" />
    <EditText
        android:id="@+id/editText_lttitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
        
    </TableRow>
        
    
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textView_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text_longitude" />
    <EditText
        android:id="@+id/editText_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
        
    </TableRow>
        
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textView_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text_location_radius" />
    <EditText
        android:id="@+id/editText_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>
        
    </TableRow>
    
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    
        <RadioGroup
            android:id="@+id/radiogroup_entering">

        <RadioButton
            android:id="@+id/radiobutton_entering"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_list_choice_item1"
            android:clickable="true"/>
        <RadioButton
            android:id="@+id/radiobutton_leaving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_list_choice_item2"/>
        </RadioGroup>
       
  
    </TableRow>
        
</LinearLayout>
