<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text_location_name" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height" >

            <TextView
                android:id="@+id/textView_lattitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text_lattitude" />

            <EditText
                android:id="@+id/editText_lttitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height" >

            <TextView
                android:id="@+id/textView_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text_longitude" />

            <EditText
                android:id="@+id/editText_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text_location_radius" />

            <EditText
                android:id="@+id/editText_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number" />
        </TableRow>
    </TableLayout>

    <RadioGroup
        android:id="@+id/radiogroup_entering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radiobutton_entering"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:clickable="true"
            android:text="@string/dialog_list_choice_item1" />

        <RadioButton
            android:id="@+id/radiobutton_leaving"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:text="@string/dialog_list_choice_item2" />
    </RadioGroup>

</LinearLayout>