<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SmsSettingsActivity" >

    <Button
        android:id="@+id/button_sms_set_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms_set_location_button" 
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">
    
    <EditText
        android:id="@+id/edittext_sms_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sms_enter_phone_number"
        android:inputType="phone" 

        android:focusable="true"
        android:clickable="true"/>
    
     <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

         <ImageButton
             android:id="@+id/imageButton_sms_contact_picker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/contact_picker" 
             android:contentDescription="@string/sms_image_button_content_description"
             android:layout_gravity="center"/>
         
    </LinearLayout>
    </LinearLayout>
    
    
    
    <EditText
        android:id="@+id/editText_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/sms_message_text_view"
		
        android:gravity="top"
        android:inputType="text"
       />

</LinearLayout>