<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:gravity="center_vertical" >

        <CheckBox
            android:id="@+id/checkBox_brightness_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_fragment_brigtness" />

        <SeekBar
            android:id="@+id/seekBar_brightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/normal_margin" />
    </TableRow>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:gravity="center_vertical" >

        <CheckBox
            android:id="@+id/checkBox_sleep_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/textView_sleep_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/textView_sleep"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/checkBox_sleep_enable"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/display_fragment_sleep" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkBox_autorotation_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_autorotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/display_fragment_autorotation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="right"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/switch_autorotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_switch"
                android:focusable="false"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkBox_pulse_notification_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_pulse_notification_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_fragment_pulse_notification" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/switch_pulse_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_switch"
                android:focusable="false"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>