<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_button_height"
        app:cardCornerRadius="@dimen/main_card_radius"
        app:cardElevation="@dimen/main_card_elevation" >

        <com.gc.materialdesign.views.LayoutRipple
            android:id="@+id/main_menu_profile_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF"
            android:clickable="true"
            app:rippleSpeed="100.0" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/list_row_profile"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/splash_screen_font_gray" />
        </com.gc.materialdesign.views.LayoutRipple>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_button_height"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/main_card_radius"
        app:cardElevation="@dimen/main_card_elevation" >

        <com.gc.materialdesign.views.LayoutRipple
            android:id="@+id/main_menu_alarm_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF"
            android:clickable="true"
            app:rippleSpeed="100.0" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/list_row_alarm"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/splash_screen_font_gray" />
        </com.gc.materialdesign.views.LayoutRipple>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_button_height"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/main_card_radius"
        app:cardElevation="@dimen/main_card_elevation" >

        <com.gc.materialdesign.views.LayoutRipple
            android:id="@+id/main_menu_sms_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF"
            android:clickable="true"
            app:rippleSpeed="100.0" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/list_row_sms"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/splash_screen_font_gray" />
        </com.gc.materialdesign.views.LayoutRipple>
    </android.support.v7.widget.CardView>

</LinearLayout>